<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_delivery_track"
            android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
              android:textColor="@android:color/black"
              android:text="@string/type_plate"
              android:gravity="center"
              android:layout_margin="12dp"
              android:textSize="16sp"
              android:lineSpacingExtra="5dp"
              android:textAllCaps="true"
              android:layout_height="wrap_content"/>

    <EditText android:layout_width="match_parent"
              android:id="@+id/placeNumberEditText"
              android:layout_marginStart="24dp"
              android:textAllCaps="true"
              android:textColor="@android:color/white"
              android:layout_marginEnd="24dp"
              android:maxLength="8"
              android:textColorHint="@android:color/darker_gray"
              android:hint="@string/plate_number_hint"
              android:gravity="center"
              android:background="@drawable/shape_button_background"
              android:inputType="text"
              android:imeOptions="actionDone"
              android:layout_height="48dp"/>

    <Button android:layout_width="match_parent"
            android:id="@+id/proceedButton"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:textColor="@android:color/white"
            android:text="@string/proceed"
            android:layout_marginEnd="24dp"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/plate_number_hint"
            android:gravity="center"
            android:background="@drawable/shape_button_background"
            android:layout_height="48dp"/>

    <ProgressBar android:layout_width="wrap_content"
                 android:id="@+id/leadingProgress"
                 android:indeterminateTint="@color/colorAccent"
                 android:layout_marginTop="12dp"
                 android:visibility="invisible"
                 tools:visibility="visible"
                 android:layout_height="wrap_content"/>

</LinearLayout>
